# FreeML

./: .gitignore  CMakeLists.txt  README.md
ActivationLibrary/: ActivationFunction.h  Activations.h  Gelu.h  Identity.h  LeakyRelu.h  Relu.h  ReluOpt.h  Sigmoid.h  Tanh.h
Examples/DiffusionModel/: Diffusion.cpp  DiffusionHelpers.h
Examples/HelloFreeML/: HelloFreeML.cpp
Examples/NanoLLM/: NanoLLM.cpp
Examples/OrGate/: OrGate.cpp  OrGateBatched.cpp
LayerLibrary/: ActivationLayer.h  AddLayer.h  CausalSelfAttentionLayer.h  Conv2D.h  Conv2DTranspose.h  Datablob.h  Dense.h  DropoutLayer.h  Embedding.h  FlattenCopyLayer.h  Layer.h  LayerNorm.h  Layers.h  TransformerBlock.h  UNet.h  VariationalAutoencoder.h  VariationalAutoencoder_Decode.h
Loading/: SaveLoader.h
LossLibrary/: BinaryCrossEntropy.h  CMakeLists.txt  CategoricalCrossEntropyWithLogits.h  DirectLoss.h  DirectNormalisedLoss.h  Loss.h  Losses.h  MeanSquaredError.h
MatrixLibrary/: MatrixBase.h  MatrixBase_Functions.h  MatrixBase_Mul.h  MatrixInvalid.h  MatrixManager.h
MatrixLibrary/CPU/: MatrixCPU.h
MatrixLibrary/GPU/DirectX11/: DirectX11Manager.h  MatrixDX11.h  MatrixDX11_Functions.h
MatrixLibrary/GPU/DirectX11/Shaders/: adam_update.hlsl  add.hlsl  add_inplace.hlsl  broadcast_add.hlsl  cce_logits_grad.hlsl  cce_logits_loss.hlsl  conv2d_single_channel.hlsl  conv2d_single_channel_backwards.hlsl  conv2d_single_channel_backwards_errorout.hlsl  conv2d_single_channel_backwards_wupdate.hlsl  conv2d_single_channel_bias.hlsl  conv2d_transpose_single_channel.hlsl  conv2d_transpose_single_channel_backwards_errorout.hlsl  copy_range.hlsl  fill.hlsl  gelu.hlsl  (+48 more)
ModelLibrary/: Model.h
OptimiserLibrary/: AdamOptimiser.h  AdamWOptimiser.h  BasicOptimiser.h  Optimiser.h  Optimisers.h
ToolsLibrary/: Logger.h  ThreadPool.h  Timer.h  Tools.h
